Persistent forms: tabs are now closable, added toggle buttons, forms can be manually removed and selected, simplified use, added session for visible and selected, scroll on click hashes no longer conflict

--- a/css/dark.css
+++ b/css/dark.css
@@ -385,3 +385,29 @@
 			margin:auto;
 			display:inline-block;
 		}
+		/*Persistent forms*/
+		#ps-formholder{
+			position: fixed;
+			text-align: center;
+			display: none;
+			bottom: 0;
+			padding: 10px;
+			border: 1px solid #000;
+			background:url('../images/gray_sand.png');
+			width: 100%;
+			height: 300px;
+			opacity: 0.9;
+			z-index: 30;
+		}
+		#ps-drag{
+			position: absolute;
+		    width: 100%;
+		    background:url('../images/broken_noise.png');
+		    top: 0;
+		    left: 0;
+		    cursor: row-resize;
+		    padding-right: 10px;
+		}
+		#ps-content{
+			color: #fff;
+		}
